fix: padding on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ button:focus-visible {
     transform-origin: right center;
   }
 
-  .PromoSidebarContainer {
+  .PromoSidebarContainer > div {
     padding-left: 0 !important;
   }
 
